--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link
     rel="stylesheet"
     href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/style.css">
     
 </head>
 <body>
@@ -58,8 +58,8 @@
                     <p>Llevate la tuya!  </p>
                 </div>
             </div>
-        </div>
-        </section class="descripcion-container">
+        </section>
+        <section class="descripcion-container">
             <article class="descripcion">
                 <div class="descripcion-text">
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora situr adipisicing elit. Tempora sit hic explicabo dolore voluptatem temporibus, fugit mollitia architecto dolorem tenetur et aliquam illo, facilis repellendus earum natus quos odio quo.</p>
