--- a/pages/ArmaTuPc.html
+++ b/pages/ArmaTuPc.html
@@ -7,7 +7,7 @@
     <link
     rel="stylesheet"
     href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header class="nav-wrapper">
@@ -65,14 +65,15 @@
             </div>
         </section>
         <section class="partesgaleria">
-            <img class="gal1" src="../assets/Icons/cpu.png" alt="">
-            <img class="gal2" src="../assets/Icons/cpu.png" alt="">
-            <img class="gal3" src="../assets/Icons/cpu.png" alt="">
-            <img class="gal4" src="../assets/Icons/cpu.png" alt="">
-            <img class="gal5" src="../assets/Icons/cpu.png" alt="">
-            <img class="gal6" src="../assets/Icons/cpu.png" alt="">
-            <img class="gal7" src="../assets/Icons/cpu.png" alt="">
-            <img class="gal8" src="../assets/Icons/cpu.png" alt="">
+            <div><img class="gal1" src="../assets/Icons/cpu.png" alt=""></div>
+            <div><img class="gal2" src="../assets/Icons/cpu.png" alt=""></div>
+            <div><img class="gal3" src="../assets/Icons/cpu.png" alt=""></div>
+            <div><img class="gal4" src="../assets/Icons/cpu.png" alt=""></div>
+            <div><img class="gal5" src="../assets/Icons/cpu.png" alt=""></div>
+            <div><img class="gal6" src="../assets/Icons/cpu.png" alt=""></div>
+            <div><img class="gal7" src="../assets/Icons/cpu.png" alt=""></div>
+            <div><img class="gal8" src="../assets/Icons/cpu.png" alt=""></div>
+            
         </section>
         <div class="flecha">
             <button>Anterior</button>
