--- a/pages/DondeEstamos.html
+++ b/pages/DondeEstamos.html
@@ -7,7 +7,7 @@
     <link
     rel="stylesheet"
     href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header class="nav-wrapper">
@@ -40,6 +40,16 @@
         <img class="local5" src="../assets/Images/tecladin.jpeg" alt="">
         <img class="local6" src="../assets/Images/vicio.jpeg" alt="">
     </section>
+    <div class="logoflex">
+        <div class="loguitocard">
+            <div class="loguito">
+                <img src="../assets/Images/AsciscoGamingStore.png" alt="">
+            </div>
+            <div class="loguitodes">
+                <p>100% Gaming!</p>
+            </div>
+        </div>
+    </div>
     
         <div>
             <p class="maildecontacto"> Tambien podes comunicarte via mail a: Asciscogamingstore@gmail.com</p>
