--- a/pages/Pedidos.html
+++ b/pages/Pedidos.html
@@ -7,7 +7,7 @@
     <link
     rel="stylesheet"
     href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header class="nav-wrapper">
@@ -25,7 +25,7 @@
         </nav>
     </header>
     <main>
-        <p class="instrucciones">Ingresa tus datos paar chequear el estado de tu pedido:</p>
+        <p class="instrucciones">Ingresa tus datos para chequear el estado de tu pedido:</p>
         <form action="">
             <fieldset class="formulario-container">
                 <section class="formulario">
