--- a/pages/Productos.html
+++ b/pages/Productos.html
@@ -7,7 +7,7 @@
     <link
     rel="stylesheet"
     href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header class="nav-wrapper">
