--- a/pages/ArmaTuPc.html
+++ b/pages/ArmaTuPc.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Arma Tu Pc Ya!">
+    <meta name="keywords" content="monitor, cpu, gpu, mouse, teclado">
+    <meta name="robots" content="index, nofollow">
     <title>Arma tu Pc</title>
     <link
     rel="stylesheet"
@@ -65,14 +68,14 @@
             </div>
         </section>
         <section class="partesgaleria">
-            <div><img class="gal1" src="../assets/Icons/cpu.png" alt=""></div>
-            <div><img class="gal2" src="../assets/Icons/cpu.png" alt=""></div>
-            <div><img class="gal3" src="../assets/Icons/cpu.png" alt=""></div>
-            <div><img class="gal4" src="../assets/Icons/cpu.png" alt=""></div>
-            <div><img class="gal5" src="../assets/Icons/cpu.png" alt=""></div>
-            <div><img class="gal6" src="../assets/Icons/cpu.png" alt=""></div>
-            <div><img class="gal7" src="../assets/Icons/cpu.png" alt=""></div>
-            <div><img class="gal8" src="../assets/Icons/cpu.png" alt=""></div>
+            <div><img class="gal1" src="../assets/Icons/cpuicon.jpg" alt=""></div>
+            <div><img class="gal2" src="../assets/Icons/cpuicon.jpg" alt=""></div>
+            <div><img class="gal3" src="../assets/Icons/cpuicon.jpg" alt=""></div>
+            <div><img class="gal4" src="../assets/Icons/cpuicon.jpg" alt=""></div>
+            <div><img class="gal5" src="../assets/Icons/cpuicon.jpg" alt=""></div>
+            <div><img class="gal6" src="../assets/Icons/cpuicon.jpg" alt=""></div>
+            <div><img class="gal7" src="../assets/Icons/cpuicon.jpg" alt=""></div>
+            <div><img class="gal8" src="../assets/Icons/cpuicon.jpg" alt=""></div>
             
         </section>
         <div class="flecha">
