--- a/pages/Productos.html
+++ b/pages/Productos.html
@@ -26,7 +26,7 @@
     </header>
     <main>
         <div>
-            <h2>Categorias</h2>
+            <h1 class="introayuda">Navega por nuestras <strong>Categorias</strong> y encontra lo que lleve tu gaming al maximo</h1>
         </div>
         <section class="productos-container">
             <section class="productos">
