--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Bienvenido a Ascisco Gaming Store, Sumate ya a la mejor comunidad gamer de Argenitina!">
+    <meta name="keywords" content="fps, cpu, gpu, gaming, teclado">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Ascisco Gaming Store">
+    
     <title>Ascisco Gaming Store</title>
+    <link rel="shortcut icon" href="./assets/Images/AsciscoGamingStorejoystick.ico" type="image/x-icon">
     <link
     rel="stylesheet"
     href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
